# average_frames_color_to_image

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
